--- a/style.css
+++ b/style.css
@@ -189,35 +189,59 @@
   text-decoration: none;
 }
 /* login section end here */
-/* register section start here */
-.reg_section {
-  padding: 1rem 2rem;
+/* singUP page section start here */
+.singUp-section {
+  padding-top: 2rem;
+}
+.form-sing {
+  width: 100%;
+  padding: 0.5rem 2rem;
+}
+.input-items {
+  margin: 0.5rem;
+}
+.input-items img,
+.birth img {
+  width: 35px;
+  padding: 0.5rem;
+  border: 1px solid;
+  border-right: none;
+  border-radius: 0.3rem 0rem 0rem 0.3rem;
+  background-color: white;
+}
+
+.input-items input {
+  width: 100%;
+  padding: 0.2rem;
+  border: 1px solid;
+  outline: 0px;
+}
+.input-items p {
+  text-align: left;
+  padding: 0;
+  margin: 0;
+}
+.select-group p {
+  text-align: left;
+  padding: 0;
+  padding-left: 0.5rem;
+  margin: 0;
+}
+.birth {
+  padding: 0rem 0.5rem;
+}
+.birth select {
+  width: 100%;
+}
+.sing-btn {
   text-align: center;
+  width: 90%;
+  margin: 1rem;
+  padding: 0.5rem 1rem;
+  font-size: 17px;
+  font-weight: bolder;
+  border: none;
+  color: white;
+  background-color: rgb(20, 150, 20);
 }
-
-.reg-logo-div {
-  margin-bottom: 1rem;
-}
-.reg-logo-div img {
-  width: 70px;
-}
-
-.select-form-group {
-  display: flex;
-  align-items: center;
-
-  width: 100%;
-  margin: 0.5rem 0rem;
-}
-.select-inpt {
-  width: 100%;
-  margin-left: 0.5rem;
-}
-.reg-btn {
-  width: 100%;
-}
-.log-link {
-  text-decoration: none;
-}
-
-/* register section end here */
+/* singUP page section end here */
