--- a/style.css
+++ b/style.css
@@ -81,6 +81,7 @@
 }
 .shadow img {
   width: 100%;
+  margin: 4rem 0rem;
 }
 /* <!-- section-2 slider section end here --> */
 /* section-3 company start here */
@@ -245,3 +246,28 @@
   background-color: rgb(20, 150, 20);
 }
 /* singUP page section end here */
+/* Ekyc program page section end here */
+
+.ekyc-card {
+  margin: 1rem 2rem;
+  box-shadow: 2px 2px 4px #777777;
+}
+.ekyc-card a img {
+  width: 90%;
+}
+
+/* Ekyc program page section end here */
+/* Ekyc banking page section start here */
+.ekyc-banking {
+  margin: 2rem;
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  gap: 1rem;
+}
+.ekyc-banking img {
+  padding: 1rem;
+
+  width: 100%;
+  box-shadow: 2px 2px 4px #777777;
+}
+/* Ekyc banking page section end here */
